@@ -219,6 +219,8 @@ body {
 
 <p><strong>save_oncutscene</strong> | <code>bool</code> | Saves the game when triggering any cutscene via an Event.</p>
 
+<p><strong>save_anywhere</strong> | <code>bool</code> | Saves the game when using a button.</p>
+
 <p><strong>camera_speed</strong> | <code>float</code> | Modifies how fast the camera moves to recenter on the player. Larger values mean a slower camera. Default value is 10.</p>
 
 <p><strong>save_buyback</strong> | <code>bool</code> | Saves the vendor buyback stock whenever the game is saved.</p>
@@ -1302,6 +1304,20 @@ body {
 <p><strong>text_pos</strong> | <code>label</code> | Position of the text label with the map name.</p>
 
 <p><strong>background</strong> | <code>filename</code> | Optional background image.</p>
+
+<p><strong>color_wall</strong> | <code>color, int : Color, Alpha</code> | Color used for walls.</p>
+
+<p><strong>color_obst</strong> | <code>color, int : Color, Alpha</code> | Color used for small obstacles and pits.</p>
+
+<p><strong>color_hero</strong> | <code>color, int : Color, Alpha</code> | Color used for the player character.</p>
+
+<p><strong>color_enemy</strong> | <code>color, int : Color, Alpha</code> | Color used for enemies engaged in combat.</p>
+
+<p><strong>color_ally</strong> | <code>color, int : Color, Alpha</code> | Color used for allies.</p>
+
+<p><strong>color_npc</strong> | <code>color, int : Color, Alpha</code> | Color used for NPCs.</p>
+
+<p><strong>color_teleport</strong> | <code>color, int : Color, Alpha</code> | Color used for intermap teleports.</p>
 
 <hr />
 
