@@ -23,28 +23,39 @@ FLARE.  If not, see http://www.gnu.org/licenses/
  * class MenuMiniMap
  */
 
+#include "Avatar.h"
 #include "CommonIncludes.h"
+#include "Enemy.h"
+#include "EnemyManager.h"
 #include "EngineSettings.h"
 #include "FileParser.h"
 #include "FontEngine.h"
 #include "InputState.h"
 #include "MapCollision.h"
+#include "MapRenderer.h"
 #include "Menu.h"
 #include "MenuMiniMap.h"
 #include "RenderDevice.h"
 #include "Settings.h"
 #include "SharedResources.h"
+#include "SharedGameResources.h"
 #include "UtilsParsing.h"
 #include "WidgetLabel.h"
 
 #include <cmath>
 
 MenuMiniMap::MenuMiniMap()
-	: color_wall(128,128,128,255)
-	, color_obst(64,64,64,255)
-	, color_hero(255,255,255,255)
+	: color_wall(128,128,128)
+	, color_obst(64,64,64)
+	, color_hero(255,255,255)
+	, color_enemy(255,0,0)
+	, color_ally(255,255,0)
+	, color_npc(0,255,0)
+	, color_teleport(0,191,255)
 	, map_surface(NULL)
 	, map_surface_2x(NULL)
+	, map_surface_entities(NULL)
+	, map_surface_entities_2x(NULL)
 	, label(new WidgetLabel())
 	, compass(NULL)
 	, current_zoom(1)
@@ -71,6 +82,34 @@ MenuMiniMap::MenuMiniMap()
 			// @ATTR background|filename|Optional background image.
 			else if (infile.key == "background") {
 				bg_filename = infile.val;
+			}
+			// @ATTR color_wall|color, int : Color, Alpha|Color used for walls.
+			else if (infile.key == "color_wall") {
+				color_wall = Parse::toRGBA(infile.val);
+			}
+			// @ATTR color_obst|color, int : Color, Alpha|Color used for small obstacles and pits.
+			else if (infile.key == "color_obst") {
+				color_obst = Parse::toRGBA(infile.val);
+			}
+			// @ATTR color_hero|color, int : Color, Alpha|Color used for the player character.
+			else if (infile.key == "color_hero") {
+				color_hero = Parse::toRGBA(infile.val);
+			}
+			// @ATTR color_enemy|color, int : Color, Alpha|Color used for enemies engaged in combat.
+			else if (infile.key == "color_enemy") {
+				color_enemy = Parse::toRGBA(infile.val);
+			}
+			// @ATTR color_ally|color, int : Color, Alpha|Color used for allies.
+			else if (infile.key == "color_ally") {
+				color_ally = Parse::toRGBA(infile.val);
+			}
+			// @ATTR color_npc|color, int : Color, Alpha|Color used for NPCs.
+			else if (infile.key == "color_npc") {
+				color_npc = Parse::toRGBA(infile.val);
+			}
+			// @ATTR color_teleport|color, int : Color, Alpha|Color used for intermap teleports.
+			else if (infile.key == "color_teleport") {
+				color_teleport = Parse::toRGBA(infile.val);
 			}
 			else {
 				infile.error("MenuMiniMap: '%s' is not a valid key.", infile.key.c_str());
@@ -182,14 +221,16 @@ void MenuMiniMap::prerender(MapCollision *collider, int map_w, int map_h) {
 	map_size.x = map_w;
 	map_size.y = map_h;
 
+	clearEntities();
+
 	if (eset->tileset.orientation == eset->tileset.TILESET_ISOMETRIC) {
-		prerenderIso(collider, &map_surface, 1);
-		prerenderIso(collider, &map_surface_2x, 2);
+		prerenderIso(collider, &map_surface, &map_surface_entities, 1);
+		prerenderIso(collider, &map_surface_2x, &map_surface_entities_2x, 2);
 	}
 	else {
 		// eset->tileset.TILESET_ORTHOGONAL
-		prerenderOrtho(collider, &map_surface, 1);
-		prerenderOrtho(collider, &map_surface_2x, 2);
+		prerenderOrtho(collider, &map_surface, &map_surface_entities, 1);
+		prerenderOrtho(collider, &map_surface_2x, &map_surface_entities_2x, 2);
 	}
 }
 
@@ -213,11 +254,14 @@ void MenuMiniMap::renderMapSurface(const FPoint& hero_pos) {
 	clip.h = pos.h;
 
 	Sprite* target_surface = NULL;
+	Sprite* target_surface_entities = NULL;
 	if (settings->minimap_mode == Settings::MINIMAP_NORMAL && map_surface) {
 		target_surface = map_surface;
+		target_surface_entities = map_surface_entities;
 	}
 	else if (settings->minimap_mode == Settings::MINIMAP_2X && map_surface_2x) {
 		target_surface = map_surface_2x;
+		target_surface_entities = map_surface_entities_2x;
 	}
 
 	if (target_surface) {
@@ -226,22 +270,32 @@ void MenuMiniMap::renderMapSurface(const FPoint& hero_pos) {
 		render_device->render(target_surface);
 	}
 
-	// draw the player cursor
-	Point center(window_area.x + pos.x + pos.w/2, window_area.y + pos.y + pos.h/2);
-	render_device->drawLine(center.x - current_zoom, center.y, center.x + current_zoom, center.y, color_hero);
-	render_device->drawLine(center.x, center.y - current_zoom, center.x, center.y + current_zoom, color_hero);
+	if (target_surface_entities) {
+		if (eset->tileset.orientation == eset->tileset.TILESET_ISOMETRIC) {
+			renderEntitiesIso(target_surface_entities, current_zoom);
+		}
+		else {
+			// eset->tileset.TILESET_ORTHOGONAL
+			renderEntitiesOrtho(target_surface_entities, current_zoom);
+		}
+
+		target_surface_entities->setClipFromRect(clip);
+		target_surface_entities->setDestFromRect(map_area);
+		render_device->render(target_surface_entities);
+	}
 }
 
-void MenuMiniMap::prerenderOrtho(MapCollision *collider, Sprite** target_surface, int zoom) {
+void MenuMiniMap::prerenderOrtho(MapCollision *collider, Sprite** tile_surface, Sprite** entity_surface, int zoom) {
 	int surface_size = std::max(map_size.x + zoom, map_size.y + zoom) * zoom;
-	createMapSurface(target_surface, surface_size, surface_size);
+	createMapSurface(tile_surface, surface_size, surface_size);
+	createMapSurface(entity_surface, surface_size, surface_size);
 
-	if (!(*target_surface))
+	if (!(*tile_surface))
 		return;
 
-	Image* target_img = (*target_surface)->getGraphics();
-	const int target_w = (*target_surface)->getGraphicsWidth();
-	const int target_h = (*target_surface)->getGraphicsHeight();
+	Image* target_img = (*tile_surface)->getGraphics();
+	const int target_w = (*tile_surface)->getGraphicsWidth();
+	const int target_h = (*tile_surface)->getGraphicsHeight();
 
 	Color draw_color;
 
@@ -256,7 +310,7 @@ void MenuMiniMap::prerenderOrtho(MapCollision *collider, Sprite** target_surface
 			else if (tile_type == 2 || tile_type == 6) draw_color = color_obst;
 			else draw_tile = false;
 
-			if (draw_tile) {
+			if (draw_tile && draw_color.a != 0) {
 				for (int l = 0; l < zoom; l++) {
 					for (int k =0; k < zoom; k++) {
 						target_img->drawPixel((zoom*i)+k, (zoom*j)+l, draw_color);
@@ -269,11 +323,12 @@ void MenuMiniMap::prerenderOrtho(MapCollision *collider, Sprite** target_surface
 	target_img->endPixelBatch();
 }
 
-void MenuMiniMap::prerenderIso(MapCollision *collider, Sprite** target_surface, int zoom) {
+void MenuMiniMap::prerenderIso(MapCollision *collider, Sprite** tile_surface, Sprite** entity_surface, int zoom) {
 	int surface_size = std::max(map_size.x + zoom, map_size.y + zoom) * 2 * zoom;
-	createMapSurface(target_surface, surface_size, surface_size);
+	createMapSurface(tile_surface, surface_size, surface_size);
+	createMapSurface(entity_surface, surface_size, surface_size);
 
-	if (!(*target_surface))
+	if (!(*tile_surface))
 		return;
 
 	// a 2x1 pixel area correlates to a tile, so we can traverse tiles using pixel counting
@@ -286,9 +341,9 @@ void MenuMiniMap::prerenderIso(MapCollision *collider, Sprite** target_surface, 
 
 	bool odd_row = false;
 
-	Image* target_img = (*target_surface)->getGraphics();
-	const int target_w = (*target_surface)->getGraphicsWidth();
-	const int target_h = (*target_surface)->getGraphicsHeight();
+	Image* target_img = (*tile_surface)->getGraphics();
+	const int target_w = (*tile_surface)->getGraphicsWidth();
+	const int target_h = (*tile_surface)->getGraphicsHeight();
 
 	target_img->beginPixelBatch();
 
@@ -309,7 +364,7 @@ void MenuMiniMap::prerenderIso(MapCollision *collider, Sprite** target_surface, 
 				else if (tile_type == 2 || tile_type == 6) draw_color = color_obst;
 				else draw_tile = false;
 
-				if (draw_tile) {
+				if (draw_tile && draw_color.a != 0) {
 					if (odd_row) {
 						for (int l = 0; l < zoom; l++) {
 							for (int k = 0; k < zoom * 2; k++) {
@@ -348,9 +403,181 @@ void MenuMiniMap::prerenderIso(MapCollision *collider, Sprite** target_surface, 
 	target_img->endPixelBatch();
 }
 
+void MenuMiniMap::renderEntitiesOrtho(Sprite* entity_surface, int zoom) {
+	if (!entity_surface)
+		return;
+
+	Color draw_color;
+	int tile_type;
+
+	Image* target_img = entity_surface->getGraphics();
+	const int target_w = entity_surface->getGraphicsWidth();
+	const int target_h = entity_surface->getGraphicsHeight();
+
+	target_img->fillWithColor(Color(0,0,0,0));
+
+	clearEntities();
+	fillEntities();
+
+	target_img->beginPixelBatch();
+
+	for (int i=0; i<std::min(target_w, map_size.x); i++) {
+		for (int j=0; j<std::min(target_h, map_size.y); j++) {
+			bool draw_tile = true;
+			tile_type = entities[i][j];
+
+			if (tile_type == TILE_HERO) draw_color = color_hero;
+			else if (tile_type == TILE_ENEMY) draw_color = color_enemy;
+			else if (tile_type == TILE_NPC) draw_color = color_npc;
+			else if (tile_type == TILE_TELEPORT) draw_color = color_teleport;
+			else if (tile_type == TILE_ALLY) draw_color = color_ally;
+			else draw_tile = false;
+
+			if (draw_tile && draw_color.a != 0) {
+				for (int l = 0; l < zoom; l++) {
+					for (int k =0; k < zoom; k++) {
+						target_img->drawPixel((zoom*i)+k, (zoom*j)+l, draw_color);
+					}
+				}
+			}
+		}
+	}
+
+	target_img->endPixelBatch();
+}
+
+void MenuMiniMap::renderEntitiesIso(Sprite* entity_surface, int zoom) {
+	if (!entity_surface)
+		return;
+
+	// a 2x1 pixel area correlates to a tile, so we can traverse tiles using pixel counting
+	Color draw_color;
+	int tile_type;
+
+	Point tile_cursor;
+	tile_cursor.x = -std::max(map_size.x, map_size.y)/2;
+	tile_cursor.y = std::max(map_size.x, map_size.y)/2;
+
+	bool odd_row = false;
+
+	Image* target_img = entity_surface->getGraphics();
+	const int target_w = entity_surface->getGraphicsWidth();
+	const int target_h = entity_surface->getGraphicsHeight();
+
+	target_img->fillWithColor(Color(0,0,0,0));
+
+	clearEntities();
+	fillEntities();
+
+	target_img->beginPixelBatch();
+
+	// for each pixel row
+	for (int j=0; j<target_h; j++) {
+
+		// for each 2-px wide column
+		for (int i=0; i<target_w; i+=2) {
+
+			// if this tile is the max map size
+			if (tile_cursor.x >= 0 && tile_cursor.y >= 0 && tile_cursor.x < map_size.x && tile_cursor.y < map_size.y) {
+
+				tile_type = entities[tile_cursor.x][tile_cursor.y];
+				bool draw_tile = true;
+
+				if (tile_type == TILE_HERO) draw_color = color_hero;
+				else if (tile_type == TILE_ENEMY) draw_color = color_enemy;
+				else if (tile_type == TILE_NPC) draw_color = color_npc;
+				else if (tile_type == TILE_TELEPORT) draw_color = color_teleport;
+				else if (tile_type == TILE_ALLY) draw_color = color_ally;
+				else draw_tile = false;
+
+				if (draw_tile && draw_color.a != 0) {
+					if (odd_row) {
+						for (int l = 0; l < zoom; l++) {
+							for (int k = 0; k < zoom * 2; k++) {
+								target_img->drawPixel((zoom*i)+k, (zoom*j)+l, draw_color);
+							}
+						}
+					}
+					else {
+						for (int l = 0; l < zoom; l++) {
+							for (int k = -((zoom * 2) - zoom); k < zoom; k++) {
+								target_img->drawPixel((zoom*i)+k, (zoom*j)+l, draw_color);
+							}
+						}
+					}
+				}
+			}
+
+			// moving screen-right in isometric is +x -y in map coordinates
+			tile_cursor.x++;
+			tile_cursor.y--;
+		}
+
+		// return tile cursor to next row of tiles
+		if (odd_row) {
+			odd_row = false;
+			tile_cursor.x -= target_w/2;
+			tile_cursor.y += (target_w/2 +1);
+		}
+		else {
+			odd_row = true;
+			tile_cursor.x -= (target_w/2 -1);
+			tile_cursor.y += target_w/2;
+		}
+	}
+
+	target_img->endPixelBatch();
+}
+
+void MenuMiniMap::clearEntities() {
+	entities.resize(map_size.x);
+	for (size_t i=0; i<entities.size(); ++i) {
+		entities[i].resize(map_size.y);
+		for (size_t j=0; j<entities[i].size(); ++j) {
+			entities[i][j] = 0;
+		}
+	}
+}
+
+void MenuMiniMap::fillEntities() {
+	Point hero = Point(pc->stats.pos);
+	if (hero.x >= 0 && hero.y >= 0 && hero.x < map_size.x && hero.y < map_size.y) {
+		entities[hero.x][hero.y] = TILE_HERO;
+	}
+
+	for (size_t i=0; i<mapr->events.size(); ++i) {
+		if (mapr->events[i].getComponent(EventComponent::NPC_HOTSPOT) && EventManager::isActive(mapr->events[i])) {
+			entities[mapr->events[i].location.x][mapr->events[i].location.y] = TILE_NPC;
+		}
+		else if (mapr->events[i].activate_type == Event::ACTIVATE_ON_TRIGGER && mapr->events[i].getComponent(EventComponent::INTERMAP) && EventManager::isActive(mapr->events[i])) {
+			// TODO use location when hotspot is inappropriate?
+			Point event_pos(mapr->events[i].location.x, mapr->events[i].location.y);
+			for (int j=event_pos.x; j<event_pos.x + mapr->events[i].location.w; ++j) {
+				for (int k=event_pos.y; k<event_pos.y + mapr->events[i].location.h; ++k) {
+					entities[j][k] = TILE_TELEPORT;
+				}
+			}
+		}
+	}
+
+	for (size_t i=0; i<enemym->enemies.size(); ++i) {
+		Enemy *e = enemym->enemies[i];
+		if (e->stats.hp > 0) {
+			if (e->stats.hero_ally) {
+				entities[static_cast<int>(e->stats.pos.x)][static_cast<int>(e->stats.pos.y)] = TILE_ALLY;
+			}
+			else if (e->stats.in_combat) {
+				entities[static_cast<int>(e->stats.pos.x)][static_cast<int>(e->stats.pos.y)] = TILE_ENEMY;
+			}
+		}
+	}
+}
+
 MenuMiniMap::~MenuMiniMap() {
 	delete map_surface;
 	delete map_surface_2x;
+	delete map_surface_entities;
+	delete map_surface_entities_2x;
 
 	delete label;
 	delete compass;
