@@ -33,12 +33,26 @@ class WidgetLabel;
 
 class MenuMiniMap : public Menu {
 private:
+	enum {
+		TILE_HERO = 1,
+		TILE_ENEMY = 2,
+		TILE_NPC = 3,
+		TILE_TELEPORT = 4,
+		TILE_ALLY = 5
+	};
+
 	Color color_wall;
 	Color color_obst;
 	Color color_hero;
+	Color color_enemy;
+	Color color_ally;
+	Color color_npc;
+	Color color_teleport;
 
 	Sprite *map_surface;
 	Sprite *map_surface_2x;
+	Sprite *map_surface_entities;
+	Sprite *map_surface_entities_2x;
 	Point map_size;
 
 	Rect pos;
@@ -49,10 +63,16 @@ private:
 	int current_zoom;
 	bool lock_zoom_change;
 
+	std::vector< std::vector<unsigned short> > entities;
+
 	void createMapSurface(Sprite** target_surface, int w, int h);
 	void renderMapSurface(const FPoint& hero_pos);
-	void prerenderOrtho(MapCollision *collider, Sprite** target_surface, int zoom);
-	void prerenderIso(MapCollision *collider, Sprite** target_surface, int zoom);
+	void prerenderOrtho(MapCollision *collider, Sprite** tile_surface, Sprite** entity_surface, int zoom);
+	void prerenderIso(MapCollision *collider, Sprite** tile_surface, Sprite** entity_surface, int zoom);
+	void renderEntitiesOrtho(Sprite* entity_surface, int zoom);
+	void renderEntitiesIso(Sprite* entity_surface, int zoom);
+	void clearEntities();
+	void fillEntities();
 
 public:
 	MenuMiniMap();
