@@ -7,6 +7,8 @@ Engine features:
 * Added support for fading out combat text. See the 'fade_duration' property in engine/combat.txt.
 * Added 'save_oncutscene' property to engine/misc.txt. Saving before a cutscene was previously controlled with 'save_onload', which caused issues with cutscenes when set to false.
 * Added 'save_anywhere' property to engine/misc.txt. This allows for saving via the pause menu. (m7600)
+* Added display of enemies, allies, NPCs, and intermap teleport events to the minimap.
+* Added support for defining the colors of tiles and entities on the minimap.
 
 Engine fixes:
 
